--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ board = seeed_xiao_esp32s3
 framework = arduino
 lib_deps =
 	arduino-libraries/ArduinoBLE
-monitor_port = COM5
-monitor_speed = 115200
+#monitor_port = COM5
+#monitor_speed = 115200
 extra_scripts = pre:compile_hli.py
 
 [env:debug]
